# amoc

./: .gitignore  CLIMATE-MODELS.md  DESIGN.md  GAME-DESIGN.md  IMPLEMENTATION.md  KNOWLEDGE.md  PHYSICS_REGISTRY.md  README.md  ROADMAP.md  SYSTEM.md  albedo_1deg.json  capture-diagnostics.mjs  cloud_fraction_1deg.json  cloud_types_1deg.json  debug-month.mjs  fetch-bathymetry.mjs  fetch-data-hires.py  fetch-land-elevation.mjs  fetch-real-earth-data.py  generate-land-data.mjs  godas_currents_1deg.json  index.html  package-lock.json  package.json  precipitation_1deg.json  reference-sst.html  salinity_1deg.json  sim-api.js  sim-control.mjs  submit-version.mjs  test-amoc-collapse.mjs  test-convergence-local.mjs  test-convergence.mjs  test-ireland-sst-compare.mjs  test-ireland-warmth.mjs  test-quantitative.mjs  test-screenshots.mjs  tournament.mjs  tune.mjs  vercel.json  (+4 more)
amoc-jax/: .gitignore  README.md  app.py  assimilate.py  calibrate.py  data_manifest.yaml  lab.py  play.py  pyproject.toml  render_video.py  run.py
amoc-jax/docs/: data.md  limitations.md  physics.md  roadmap.md
amoc-jax/scripts/: data_status.py  evaluate.py  hysteresis-replay.py  hysteresis.py  iterate.py  render_atlas.py  render_hosing_only.py  render_scenarios.py  run.py  write-replay.py
amoc-jax/src/amoc/: __init__.py  atmosphere.py  data.py  diagnostics.py  grid.py  physics.py  poisson.py  render.py  state.py  step.py
amoc-jax/tests/: test_correctness.py  test_data.py  test_diagnostics.py  test_grid.py  test_physics.py  test_poisson.py  test_step.py
blog/: 2026-04-21-building-simamoc.html  (+2 more)
(+196 files in other folders)
